# vicon-rs

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
examples/: mock_vicon.rs  vicon_stream.rs
src/: lib.rs  sys.rs
