[package]
name = "vicon-sys"
description = "APIs for reading data from a Vicon motion capture system."
version = "0.2.0"
edition = "2021"
homepage = "https://gitlab.com/alicorn/pub/vicon-sys"
repository = "https://gitlab.com/alicorn/pub/vicon-sys"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    "Brandon Sanders",
    "Alicorn Systems, Inc. (hello@alicorn.systems)",
]

[dependencies]

# Error handling.
snafu = { version = "0.7.1", default-features = false }

[build-dependencies]

# Native C FFI generation.
bindgen = "0.66.1"